Update Achievements User Guide

--- a/src/main/resources/view/achievements/Achievements.fxml
+++ b/src/main/resources/view/achievements/Achievements.fxml
@@ -20,10 +20,13 @@
                   <HBox>
                   </HBox>
                </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
             </VBox>
          </content>
          <BorderPane.margin>
-            <Insets left="10.0" right="10.0" />
+            <Insets />
          </BorderPane.margin>
     </ScrollPane>
   </center>
