--- a/src/main/resources/view/MealPlanListPanel.fxml
+++ b/src/main/resources/view/MealPlanListPanel.fxml
@@ -49,7 +49,7 @@
          </HBox>
          <HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
             <children>
-               <ListView fx:id="mealPlanIndexListView" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefWidth="150.0" />
+               <ListView fx:id="mealPlanIndexListView" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefWidth="350.0" />
                <ScrollPane fx:id="mealPlanListPanel" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                   <content>
                      <FlowPane fx:id="mealPlanListView" focusTraversable="true" nodeOrientation="LEFT_TO_RIGHT" style="-fx-background-color: snow;" />
@@ -64,7 +64,7 @@
                                  <Insets bottom="5.0" left="5.0" top="5.0" />
                               </padding>
                            </Label>
-                           <Label fx:id="mealPlanHeader" maxHeight="-Infinity" minHeight="74.0" prefHeight="74.0" text="\$mealPlanName">
+                           <Label fx:id="mealPlanHeader" maxHeight="-Infinity" minHeight="74.0" prefHeight="74.0" text="\$mealPlanName" wrapText="true">
                               <padding>
                                  <Insets bottom="5.0" left="5.0" top="5.0" />
                               </padding>
