--- a/src/main/resources/view/CommandBox.fxml
+++ b/src/main/resources/view/CommandBox.fxml
@@ -2,11 +2,8 @@
 
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.control.ContextMenu?>
 
 <StackPane styleClass="stack-pane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
-    <TextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here...">
-        <!-- <ContextMenu fx:id="entriesPopup" /> -->
-    </TextField>
+    <TextField fx:id="commandTextField" onAction="#handleCommandEntered" promptText="Enter command here..." />
 </StackPane>
 
