Adds exercise component to UG

--- a/src/main/resources/view/RunWorkoutWindow.fxml
+++ b/src/main/resources/view/RunWorkoutWindow.fxml
@@ -8,7 +8,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.stage.Stage?>
 
+<?import javafx.scene.image.Image?>
 <Stage height="400.0" width="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+    <icons>
+        <Image url="@/images/man_cook.png" />
+    </icons>
     <scene>
         <Scene>
             <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="300.0">
