Fixed large numbers glitching timeline chart display

--- a/src/main/resources/view/ExpenseTimelineChart.fxml
+++ b/src/main/resources/view/ExpenseTimelineChart.fxml
@@ -16,7 +16,7 @@
         </xAxis>
 
         <yAxis>
-            <NumberAxis fx:id="YAxis" animated="false" label="Amount/$">
+            <NumberAxis fx:id="yAxis" animated="false" label="Amount/$">
             </NumberAxis>
         </yAxis>
     </LineChart>
