--- a/src/main/resources/view/inventory/InventoryPage.fxml
+++ b/src/main/resources/view/inventory/InventoryPage.fxml
@@ -12,9 +12,9 @@
          <children>
             <TableView fx:id="tableView" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="0.0">
               <columns>
-                  <TableColumn fx:id="indexColumn" prefWidth="75.0" text="Column X" />
-                <TableColumn fx:id="nameColumn" editable="false" prefWidth="75.0" sortable="false" styleClass="-fx-background-color:lightcoral-fx-background-color:lightcoral" text="NAME" />
-                  <TableColumn fx:id="isDoneColumn" editable="false" prefWidth="75.0" sortable="false" styleClass="-fx-background-color:lightcoral-fx-background-color:lightcoral" text="ISDONE" />
+                  <TableColumn fx:id="indexColumn" editable="false" maxWidth="87.0" minWidth="50.0" prefWidth="48.0" sortable="false" text="#" />
+                <TableColumn fx:id="nameColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="0.0" prefWidth="1251.0" sortable="false" styleClass="-fx-background-color:lightcoral-fx-background-color:lightcoral" text="Name" />
+                  <TableColumn fx:id="isDoneColumn" editable="false" maxWidth="1.7976931348623157E308" minWidth="50.0" prefWidth="50.0" sortable="false" styleClass="-fx-background-color:lightcoral-fx-background-color:lightcoral" text="✔" />
               </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
